# CMakeSampleVS

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Directory.Build.props  README.md  build.cmd  build.sh  dirs.proj  global.json
inc/core/: Sample.h
inc/lib/: SampleLib.h
src/: dirs.proj
src/app/: main.cpp
src/core/: Sample.cpp
src/interop/: SampleWrapper.cs
src/lib/: SampleLib.cpp
test/: SampleTest.cpp  dirs.proj
test/interop/: Sample.Interop.Test.csproj  SampleWrapperTest.cs
